--- a/index9.html
+++ b/index9.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <h1>1hola</h1>
-  </head>
+    <title>Practicando Git</title>
+    <h1>Git main</h1>
+    </head>
   <body>
 
   </body>
